--- a/style.css
+++ b/style.css
@@ -230,20 +230,7 @@ justify-content: space-between;
 
 }
 
-.thirdselecter{
 
-    width: 254px;
-
-    height: 50px;
-    white-space: normal;
-    
-    border-width: 1px;
-    border-color: black;
-    border-style: inset;
-    background-color:greenyellow;
-   
-
-}
 
 .thirdselecter:hover{
 
@@ -257,7 +244,7 @@ justify-content: space-between;
     height: 50px;
     
     white-space: normal;
-    
+    font-size: 20px;
     border-width: 1px;
     border-color: black;
     border-style: inset;
@@ -286,7 +273,32 @@ justify-content: space-between;
 
 }
 
+#selectbox3{
 
+    height: 350px;
+    width: 400px;
+    border-width: 1px;
+    display: flex;
+    flex-wrap: wrap;
+    border-color: black;
+    border-style: inset;
+    text-align: left;
+    
+    background-color:rgb(204, 249, 136);
+
+}
+#selectbox3 .thirdselecter {
+
+    margin-left: 75px;
+
+
+}
+
+#selectbox3 div{
+
+margin-left: 50px;
+
+}
 
 #selectbox2{
 
@@ -300,9 +312,38 @@ justify-content: space-between;
     
 }
 
+#selectbox4{
+
+    height: 300px;
+    width: 400px;
+    border-width: 1px;
+    display: flex;
+    flex-wrap: wrap;
+    border-color: black;
+    border-style: inset;
+    align-items: center;
+    justify-content: space-evenly;
+    background-color:rgb(172, 229, 252);
+    
+}
+
 #selectbox2 div{
 
     margin-top: 25px;
     
 }
 
+.thirdselecter{
+
+    width: 254px;
+
+    height: 50px;
+    white-space: normal;
+    
+    border-width: 1px;
+    border-color: black;
+    border-style: inset;
+    background-color:greenyellow;
+   
+
+}
